@@ -1,7 +1,4 @@
 class ThemeController < BaseController
-  # caches_page :stylesheets, :javascript, :images
-  session :off
-
   def stylesheets
     render_theme_item(:stylesheets, params[:filename], 'text/css; charset=utf-8')
   end
