@@ -50,13 +50,13 @@
     %a.right{"href"=>"#", "onclick"=>"$('single_upload').toggle(); $('multiple_upload').toggle(); return false"}
       =:just_uploading_one_photo.l
     
-    - session_key = (ActionController::Base.session.first[:session_key] || '_session_id').to_sym
     %p.centered
       
       %script{:type=>'text/javascript'}
         var uploader;
         window.onload = function (){
-        ="uploader = new CommunityEngine.SwfUpload('#{swfupload_user_photos_path(:user_id => current_user.id, session_key => session.session_id)}');"
+        - session_key = ActionController::Base.session_options[:key]
+        ="uploader = new CommunityEngine.SwfUpload('#{swfupload_user_photos_path(:user_id => current_user.id, session_key => cookies[session_key], request_forgery_protection_token => form_authenticity_token)}');"        
         };
         
       %div{:style=>"margin: 0px 10px;"}
