@@ -9,7 +9,7 @@
 
 <h1><%= @page_title %></h1>
 <p class="subtitle">
-  <%= feed_icon_tag @page_title, formatted_monitored_all_sb_posts_path(:user_id => @user, :format => 'rss') %>
+  <%= feed_icon_tag @page_title, monitored_all_sb_posts_path(:user_id => @user, :format => 'rss') %>
   <%= pluralize(@posts.size,"post") %> <%= :found.l %>
 </p>
 
