@@ -24,8 +24,8 @@ ActiveRecord::Base.class_eval do
     
     def body_html_with_formatting
       body_html = auto_link(body) { |text| truncate(text, :length => 50) }
-      textilized = RedCloth.new(body_html, [ :hard_breaks ])
-      textilized.hard_breaks = true if textilized.respond_to?("hard_breaks=")
-      white_list(textilized.to_html)
+      # textilized = RedCloth.new(body_html, [ :hard_breaks ]) #not using this
+      # textilized.hard_breaks = true if textilized.respond_to?("hard_breaks=")
+      white_list(body_html) 
     end
 end
