@@ -41,7 +41,7 @@ class SessionsControllerTest < ActionController::TestCase
   def test_should_delete_token_on_logout
     login_as :quentin
     get :destroy
-    assert_equal @response.cookies["auth_token"], []
+    assert_equal @response.cookies["auth_token"], nil
   end
 
   def test_should_login_with_cookie
