@@ -1,6 +1,8 @@
 require File.dirname(__FILE__) + '/../test_helper'
 
 class PhotoTest < ActiveSupport::TestCase
+  include ActionController::TestProcess
+
   fixtures :all
 
   # Replace this with your real tests.
